--- a/src/containers/CompanyDetail/CompanyDetail.scss
+++ b/src/containers/CompanyDetail/CompanyDetail.scss
@@ -47,9 +47,17 @@
     padding: 0 12px 12px 12px;
     margin-top: 12px;
   }
+  .ant-tabs-ink-bar {
+    background-color: #f57c00;
+  }
   .region-content {
     display: flex;
     flex-direction: column;
     gap: 8px;
+  }
+  .postal-code-item {
+    padding: 8px 12px;
+    border: 1px solid #d9d9d9;
+    border-radius: 8px;
   }
 }
