add info box and add postcode button for postcode

--- a/src/containers/CompanyDetail/CompanyDetail.scss
+++ b/src/containers/CompanyDetail/CompanyDetail.scss
@@ -6,7 +6,8 @@
     border-radius: 8px;
     background-color: #fff3e0;
     margin-bottom: 24px;
-    font-size: 12px;
+    font-size: 14px;
+    color: #895a18;
   }
   .ant-select {
     width: 100%;
