feat: Update environment variables and enhance CompanyDetail and DocumentUpload components for improved functionality

--- a/src/containers/CompanyDetail/CompanyDetail.scss
+++ b/src/containers/CompanyDetail/CompanyDetail.scss
@@ -5,9 +5,17 @@
     padding: 12px;
     border-radius: 8px;
     background-color: #fff3e0;
-    margin-bottom: 24px;
+    margin-bottom: 12px;
     font-size: 14px;
     color: #895a18;
+  }
+  .deny-box {
+    padding: 12px;
+    border-radius: 8px;
+    background-color: #ffebee;
+    margin-bottom: 12px;
+    font-size: 14px;
+    color: #b71c1c;
   }
   .ant-select {
     width: 100%;
