fix: Enhance button hover styles and add validation notifications in Home component

--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -63,9 +63,9 @@
     color: #ffffff;
     &:hover,
     &:focus {
-      background-color: #e65c2b;
-      border-color: #e65c2b;
-      color: #ffffff;
+      background-color: #e65c2b !important;
+      border-color: #e65c2b !important;
+      color: #ffffff !important;
     }
   }
 
